--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,39 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 body {
-    padding: 60px;
+  padding: 60px;
 }
 
+
 input {
-    color: gray;
-    font-size: 1.3rem;
-    width: 100%;
+  color: grey;
+  font-size: 1.2rem;
+  width: 100%;
 }
 
 .card-grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .card {
-    align-content: center;
-    border: 1px solid grey;
-    border-radius: 6px;
-    overflow: hidden;
-    margin-bottom: 10px;
-    margin-right: 10px;
+  align-content: center;
+  border: 1px solid grey;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
 }
 
-.card{
-    padding: 5px;
-    text-align: center;
+.card p {
+  padding: 5px;
+  text-align: center;
 }
 
-.card img{
-    max-height: 170px;
+.card img {
+  max-height: 170px;
 }
+
